--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 	<link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/stylemenu.css">
 	<link rel="stylesheet" href="assets/css/responsive.css">
+	</head>
+	<body>
+	<nav class="topnav" id="myTopnav">
+		<a href="" class="logo">Bakery Bread</a>
+		<a href="#menu" class="list-nav btn-nav">Menu</a>
+		<a href="#delivery" class="list-nav btn-nav">Delivery</a>
+		<a href="#contact" class="list-nav btn-nav">Contact Us</a>
+		<a href="https://www.google.com/maps" class="list-nav btn-nav">Location</a>
+		<a href="#" class="icon" onclick="responsive()">
+			<i class="fa fa-bars"></i>
+		</a>
+	</nav>
+
+	<!-- Jumbotron -->
+	<section class="home" id="home">
+		<div class="jumbotron" style="background-image: url('assets/img/jumbotron-roti-unsplash.jpg');">
+			<h1>Real Pleasure is Not a Guilty</h1>
+			<h1>Simple, Fresh, and Best Recipes</h1>
+			<h2>Bakery With Variant Product and <br>Offering The Best Quality For You</h2>
+			<a href="#" class="order-button">Order Now!</a>
+		</div>
+	</section>
 	<section class="menu-section" id="menu">
 		<h1>Best Seller Menu</h1>
 		<div class="menu-container">
