--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Alex+Brush|Great+Vibes|Roboto' rel='stylesheet'>
 	<link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/stylemenu.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="stylesheet" href="assets/css/responsive.css">
-	</head>
-	<body>
+
+</head>
+<body>
 	<nav class="topnav" id="myTopnav">
 		<a href="" class="logo">Bakery Bread</a>
 		<a href="#menu" class="list-nav btn-nav">Menu</a>
-		<a href="#delivery" class="list-nav btn-nav">Delivery</a>
+		<a href="#membership" class="list-nav btn-nav">Membership</a>
 		<a href="#contact" class="list-nav btn-nav">Contact Us</a>
 		<a href="https://www.google.com/maps" class="list-nav btn-nav">Location</a>
 		<a href="#" class="icon" onclick="responsive()">
@@ -85,7 +86,21 @@
             <div class="menu-item-price">$16</div>
       </div>
    	</section>
-
+   	<section class="form-section" id="membership">
+   		<div class="form">
+	        <h3>Join membership and get good offer</h3>
+	        <p>Fullname</p>
+	        <input >
+	        <p>Phone</p>
+	        <input>
+	        <p>E-mail</p>
+	        <input>
+	        <p>Message (optional)</p>
+	        <textarea ></textarea>
+	        <p>By hitting Submit button, you already joining our membership</p>
+	        <input class="form-submit" type="submit" value="Submit">
+    	</div>
+   	</section>
 
 	<script>
 		function responsive() {
