add classic footer

--- a/index.html
+++ b/index.html
@@ -35,72 +35,100 @@
 	<section class="menu-section" id="menu">
 		<h1>Best Seller Menu</h1>
 		<div class="menu-container">
-		<div class="card-menu">
-              <img src="assets/img/brooke-lark-V4MBq8kue3U-unsplash.jpg">
-              <p>Assorted Fruit Donut</p>
-          </div>
-          <div class="card-menu">
-              <img src="assets/img/kim-daniels-OrkEasJeY74-unsplash.jpg">
-              <p>Milk Pie Berry</p>
-          </div>
-          <div class="card-menu">
-              <img src="assets/img/anthony-espinosa-6iqpLKqeaE0-unsplash.jpg">
-              <p>Tiramisu Cake</p>
-          </div>
-          <div class="card-menu">
-              <img src="assets/img/dilyara-garifullina-I48gnI1Qs5o-unsplash.jpg">
-              <p>Strawberry Cake</p>
-          </div>
-          <div class="card-menu">
-              <img src="assets/img/deva-williamson-S2jw81lfrG0-unsplash.jpg">
-              <p>Macaroon Cake</p>
-          </div>
-          <div class="card-menu">
-              <img src="assets/img/leo-roza-5uerZn9OXTA-unsplash.jpg">
-              <p>Choco Cupcake</p>
-          </div>
-      </div>
-      <h2>Menu</h2>
-      <div class="menu-item">
-	      <div class="menu-item-name">Assorted Fruit Donut</div>
-	      <div class="menu-item-price">$18</div>
-  	  </div>
-  	  <div class="menu-item">
-            <div class="menu-item-name">Milk Pie Berry</div>
-            <div class="menu-item-price">$19</div>
-      </div>
-      <div class="menu-item">
-	      <div class="menu-item-name">Tiramisu Cake</div>
-	      <div class="menu-item-price">$12</div>
-  	  </div>
-  	  <div class="menu-item">
-            <div class="menu-item-name">Strawberry Cake</div>
-            <div class="menu-item-price">$13</div>
-      </div>
-      <div class="menu-item">
-            <div class="menu-item-name">Macaroon Cake</div>
-            <div class="menu-item-price">$17</div>
-      </div>
-      <div class="menu-item">
-            <div class="menu-item-name">Choco Cupcake</div>
-            <div class="menu-item-price">$16</div>
-      </div>
-   	</section>
-   	<section class="form-section" id="membership">
-   		<div class="form">
-	        <h3>Join membership and get good offer</h3>
-	        <p>Fullname</p>
-	        <input >
-	        <p>Phone</p>
-	        <input>
-	        <p>E-mail</p>
-	        <input>
-	        <p>Message (optional)</p>
-	        <textarea ></textarea>
-	        <p>By hitting Submit button, you already joining our membership</p>
-	        <input class="form-submit" type="submit" value="Submit">
-    	</div>
-   	</section>
+			<div class="card-menu">
+				<img src="assets/img/brooke-lark-V4MBq8kue3U-unsplash.jpg">
+				<p>Assorted Fruit Donut</p>
+			</div>
+			<div class="card-menu">
+				<img src="assets/img/kim-daniels-OrkEasJeY74-unsplash.jpg">
+				<p>Milk Pie Berry</p>
+			</div>
+			<div class="card-menu">
+				<img src="assets/img/anthony-espinosa-6iqpLKqeaE0-unsplash.jpg">
+				<p>Tiramisu Cake</p>
+			</div>
+			<div class="card-menu">
+				<img src="assets/img/dilyara-garifullina-I48gnI1Qs5o-unsplash.jpg">
+				<p>Strawberry Cake</p>
+			</div>
+			<div class="card-menu">
+				<img src="assets/img/deva-williamson-S2jw81lfrG0-unsplash.jpg">
+				<p>Macaroon Cake</p>
+			</div>
+			<div class="card-menu">
+				<img src="assets/img/leo-roza-5uerZn9OXTA-unsplash.jpg">
+				<p>Choco Cupcake</p>
+			</div>
+		</div>
+		<h2>Menu</h2>
+		<div class="menu-item">
+			<div class="menu-item-name">Assorted Fruit Donut</div>
+			<div class="menu-item-price">$18</div>
+		</div>
+		<div class="menu-item">
+			<div class="menu-item-name">Milk Pie Berry</div>
+			<div class="menu-item-price">$19</div>
+		</div>
+		<div class="menu-item">
+			<div class="menu-item-name">Tiramisu Cake</div>
+			<div class="menu-item-price">$12</div>
+		</div>
+		<div class="menu-item">
+			<div class="menu-item-name">Strawberry Cake</div>
+			<div class="menu-item-price">$13</div>
+		</div>
+		<div class="menu-item">
+			<div class="menu-item-name">Macaroon Cake</div>
+			<div class="menu-item-price">$17</div>
+		</div>
+		<div class="menu-item">
+			<div class="menu-item-name">Choco Cupcake</div>
+			<div class="menu-item-price">$16</div>
+		</div>
+	</section>
+	<section class="form-section" id="membership">
+		<div class="form">
+			<h3>Join membership and get good offer</h3>
+			<p>Fullname</p>
+			<input >
+			<p>Phone</p>
+			<input>
+			<p>E-mail</p>
+			<input>
+			<p>Message (optional)</p>
+			<textarea ></textarea>
+			<p>By hitting Submit button, you already joining our membership</p>
+			<input class="form-submit" type="submit" value="Submit">
+		</div>
+	</section>
+	
+	<!-- 	footer -->
+	<footer>
+		<div class="container">
+			<div class="footer-content">
+				<div class="footer-section tentang">
+					<h5>Tentang Kami</h5>
+					<p>
+						Made by sweet tooth with a big dream. Bakery Bread is a little bakery factory where born in Indonesia to make everyone happy after bitter days. This just a sample page for CEB.
+					</p>
+				</div>
+				<div class="footer-section">
+				</div>
+				<div class="footer-section social">
+					<h5>Sosial Media</h5>
+					<ul>
+						<li class="fb"><span class="fa fa-facebook"></span><a href="#">Facebook</a></li>
+						<li class="tw"><span class="fa fa-twitter"></span><a href="#">Twitter</a></li>
+						<li class="ig"><span class="fa fa-instagram"></span><a href="#">Instagram</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">&copy;2020 Copyright Bakery Bread - CEB H12</div>
+	</footer>
+	
+	
+	
 	<script>
 		function responsive() {
 			var topnav = document.getElementById("myTopnav");
