--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
 			<a href="#" class="order-button">Order Now!</a>
 		</div>
 	</section>
+	<section class="main-section">
+		<div class="main">
+      <div class="container">
+        <div class="container-2">
+          <div class="text">
+            <h1>Made  With Love</h1>
+          </div>
+          <img class="img" src="https://ak9.picdn.net/shutterstock/videos/26865439/thumb/5.jpg" alt="">
+          <div class="text-2">
+            <h1>Finest Ingredients</h1>
+          </div>
+          <img class="img-2" src="https://videohive.img.customer.envatousercontent.com/files/9ffe75fb-9da1-43ce-a7f7-0b231bc4f589/inline_image_preview.jpg?auto=compress%2Cformat&fit=crop&crop=top&max-h=8000&max-w=590&s=755a05dff45281dc828c1d39b5694fa0" alt="">
+        </div>
+        <div class="lists">
+            <a class="button a" href="#">Our Story</a>
+            <a class="button b" href="#">Menu</a>
+            <a class="button c" href="#">Events</a>
+        </div>
+      </div>
+    </div>
+	</section>
 	<section class="menu-section" id="menu">
 		<h1>Best Seller Menu</h1>
 		<div class="menu-container">
@@ -103,7 +124,7 @@
 	</section>
 	
 	<!-- 	footer -->
-	<footer>
+	<footer id="contact">
 		<div class="container">
 			<div class="footer-content">
 				<div class="footer-section tentang">
